Current semantics with gpgrt_spawn_actions_set_environ is not useful, since an application needs to access environ to prepare environment for child.
Instead, having a function to modify environ is good.
Current semantics with gpgrt_spawn_actions_set_environ is not useful, since an application needs to access environ to prepare environment for child.
Instead, having a function to modify environ is good.
| rE libgpg-error | |||
| rE1bca948594d9 spawn: Shorter identifier gpgrt_spawn_actions_set_env_rev. | |||
| rE1860f6407f83 spawn: Add new function to modify environment. | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • werner | T7169 libgpg-error 1.50 build issue (spawn-posix.c:345:5: error: use of undeclared identifier 'environ') | ||
| Resolved | • gniibe | T7307 Add new function to spawn API which has 'modifying' environment semantics |
Replacing gpgrt_spawn_actions_set_environ by gpgrt_spawn_actions_set_envchange is not good, as it's exported and already used.
Instead, adding the function is better. Here is the change for POSIX.